--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/game.css">
     <link rel="stylesheet" href="css/animate.css">
     <script src="jquery.js"></script>
+    <script src="howler.min.js"></script>
 </head>
 <body>
 <div class="game">
