Add 7 sounds for game events

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Кто хочет стать легионером</title>
+    <title>Кто хочет стать миллионером</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="jquery.js"></script>
 </head>
 <body>
 
 <div class="main">
-    <h2>Кто хочет стать легионером</h2>
+    <h2>Кто хочет стать миллионером</h2>
 
     <div class="menu">
         <ul>
