--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Кто хочет стать легионером - игра</title>
+    <title>Кто хочет стать миллионером - игра</title>
     <link rel="stylesheet" href="css/game.css">
     <link rel="stylesheet" href="css/animate.css">
     <script src="jquery.js"></script>
